# April2

./: .clangd  .docsync.yml  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  WORKFLOW_TASK_PROMPT_TEMPLATE.md  code-review.md  imgui.ini  test_profile.json
.agents/skills/april-cross-module-contract/: SKILL.md
.agents/skills/april-docsync-guard/: SKILL.md
.agents/skills/april-module-execution/: SKILL.md
.agents/skills/april-task-lifecycle/: SKILL.md  check-task-card.py
.claude/: codebase-rendering.md  plan-rendering-integration.md  plan-scene-ecs.md  settings.local.json
.claude/archive/: plan-material-asset.md  plan-static-mesh-asset.md
.gemini/: settings.json  settings.json.orig
agent/: .docsync.yml  README.md  coding-standard.md  glossary.md  quickstart.md  skill-sub-agent-workflow.md  task-commit-tracker.md
agent/decisions/: README.md
agent/integration/: asset-format.md  editor-rpc-mode.md  error-model.md  threading-model.md
agent/script/: check-docsync.py
agent/sub-agent/: task-schema.md
agent/sub-agent/asset/: changelog.md  interfaces.md  role.md  tasks.md
agent/sub-agent/editor/: changelog.md  knowledge.md
agent/sub-agent/graphics/: changelog.md  falcor-alignment-conversion-rules.md  interfaces.md  knowledge.md
agent/sub-agent/runtime/: changelog.md  tasks.md
agent/sub-agent/scene/: changelog.md
agent/sub-agent/test/: changelog.md  knowledge.md  role.md
agent/templates/: changelog.md  role.md
agent/templates/interface/: example-interface.md
agent/templates/plan/: example-plan.md
agent/templates/tasks/: RND-001.md
apps/editor/: main.cpp
archive/: timers.cpp  timers.hpp
cmake/: april-build.cmake  april-manifest.cmake  april-platform.cmake  april-resources.cmake  manifest-guide.md  tools.cmake
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/advanced-profiler_20260122/: plan.md  spec.md
conductor/archive/cpu-gpu-profiler_20260121/: index.md  metadata.json  plan.md  spec.md
conductor/archive/editor-fix_20260116/: index.md  metadata.json  plan.md  spec.md
conductor/archive/editor-framework_20260116/: index.md  metadata.json  plan.md  spec.md
conductor/archive/editor-resize-fix_20260117/: index.md  metadata.json
conductor/archive/foundation_20260113/: metadata.json  plan.md  spec.md
conductor/archive/game-editor_20260115/: index.md  metadata.json  plan.md  spec.md
conductor/archive/imgui-fix_20260117/: index.md  metadata.json  plan.md  spec.md
conductor/archive/imgui-font-example_20260118/: index.md  metadata.json  plan.md  spec.md
conductor/archive/imgui-refactor_20260115/: index.md  metadata.json  plan.md  spec.md
conductor/archive/imgui-refactor_20260117/: index.md  metadata.json  plan.md  spec.md
conductor/archive/imgui-scissor-fix_20260117/: index.md  metadata.json  plan.md  spec.md
conductor/archive/log-enhancement_20260119/: plan.md  spec.md
conductor/archive/log-refactor_20260119/: index.md  metadata.json  plan.md  spec.md
conductor/archive/program-testing_20260114/: metadata.json  plan.md  spec.md
conductor/archive/resource-usage-refactor_20260125/: index.md  metadata.json  plan.md  spec.md
conductor/archive/rhi-refactor_20260113/: metadata.json  plan.md  spec.md
conductor/archive/rhi-validation_20260115/: index.md  metadata.json  plan.md  spec.md
conductor/archive/style-reformat_20260120/: plan.md
conductor/archive/ui-elements-logger-profiler_20260119/: index.md  metadata.json  plan.md  spec.md
conductor/code_styleguides/: general.md
conductor/tracks/advanced-profiler_20260122/: metadata.json  plan.md
conductor/tracks/chrome-tracing-exporter_20260126/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/cpu-gpu-profiler_20260121/: plan.md
conductor/tracks/editor-ui-rebuild_20260117/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/editor-viewport-docking-fix_20260201/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/gpu-profiling_20260126/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/high-perf-profiler-collection_20260126/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/log-enhancement_20260119/: index.md  metadata.json
conductor/tracks/profiler-foundation_20260125/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/profiler-implementation_20260120/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/profiler-synchronization_20260126/: index.md  metadata.json  plan.md  spec.md
content/material/: default_red.material.asset
content/model/: Material.material.asset  cube.gltf.asset
decisions/: 2026-2-8-gltf-import.md
engine/asset/: manifest.txt  product.md
engine/core/: manifest.txt
engine/editor/: manifest.txt
engine/graphics/: manifest.txt
engine/runtime/: manifest.txt
engine/scene/: README.md  example-usage.cpp  manifest.txt
engine/test/: CMakeLists.txt  test-asset.cpp  test-blit.cpp  test-gpu-profiler.cpp  test-imgui-backend.cpp  test-imgui.cpp  test-implot.cpp  test-input.cpp  test-nv-template.cpp  test-object.cpp  test-profile-exporter.cpp  test-profiler-assets.cpp  test-profiler-ui.cpp  test-profiler.cpp  test-resource.cpp  test-slang-rhi.cpp  test-swapchain-resize.cpp  test-thread-registry.cpp  test-triangle.cpp  test-ui-editor.cpp  test-ui-font.cpp
engine/test/agent/: interfaces.md
engine/test/source/: test-advanced.cpp  test-binding.cpp  test-blit-reflection.cpp  test-blit-uniform-readback.cpp  test-compilation.cpp  test-conformance.cpp  test-log-enhancement.cpp  test-log-foundation.cpp  test-logger-refactor.cpp  test-reflection.cpp  test-reloading.cpp  test-rhi-validation.cpp  test-uv-coverage.cpp
engine/ui/: manifest.txt
entry/: CMakeLists.txt
entry/editor/: main.cpp
entry/game/: main.cpp
plan/: next-steps.md
scripts/: fix_format.py
sub-agent/asset/: changelog.md  interfaces.md
sub-agent/core/: interfaces.md  knowledge.md  role.md
sub-agent/graphics/: role.md
sub-agent/runtime/: role.md  tasks.md
sub-agent/scene/: knowledge.md
(+509 files in other folders)
